--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
   ],
   "require": {
     "php": ">=5.4.0",
-    "laravel/framework": "5.0.0",
+    "laravel/framework": "^4.1 || ^5.0",
     "yogarine/revision-pdo": "*"
   },
   "autoload" : {
