Add Laravel ServiceProvider to composer.json

--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,12 @@
     "psr-0" : {
       "RevisionPDO\\" : "src/"
     }
+  },
+  "extra": {
+    "laravel": {
+      "providers": [
+        "RevisionPDO\\Illuminate\\Database\\RevisionPDOServiceProvider"
+      ]
+    }
   }
 }
