--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,6 @@
   "description": "RevisionPDO integration for Laravel",
   "type": "library",
   "homepage": "https://bitbucket.org/Yogarine/revisionpdo-laravel",
-  "minimum-stability": "dev",
-  "prefer-stable": true,
   "license": "BSD-2-Clause",
   "authors": [
     {
@@ -13,7 +11,7 @@
     }
   ],
   "require": {
-    "php": ">=5.4.0",
+    "php": ">=5.3.0",
     "laravel/framework": "^4.1 || ^5.0",
     "yogarine/revision-pdo": "~0.1.0"
   },
@@ -21,6 +19,12 @@
     "psr-0" : {
       "RevisionPDO\\" : "src/"
     }
+  },
+  "minimum-stability": "stable",
+  "prefer-stable": true,
+  "config": {
+    "preferred-install": "dist",
+    "sort-packages": true
   },
   "extra": {
     "laravel": {
